# sktime-cython

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
sktime_cython/: __init__.py  minirocket.py
sktime_cython/_cython/: __init__.py  example.pyx
sktime_cython/_cython/tests/: __init__.py  test_MiniRocketMultivariateCython.py  test_example.py
sktime_cython/transformations/rocket/: __init__.py  _minirocket.py
sktime_cython/transformations/rocket/tests/: test_MiniRocketMultivariateCython.py  test_minirocket_cython.py
